...
                let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
                    guard let self = self else { return }
                    self.presenter.restartGame()
                }

            alert.addAction(action)
            alert.view.accessibilityIdentifier = "Game results"
            self.present(alert, animated: true, completion: nil)
        }

        func highlightImageBorder(isCorrectAnswer: Bool) {
            imageView.layer.masksToBounds = true
            imageView.layer.borderWidth = 8
...
